--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
